--- a/kubernetes/feedback-service/deployment.yaml
+++ b/kubernetes/feedback-service/deployment.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: feedback-service
-        image: plateforme_educative-feedback-service:latest
-        imagePullPolicy: IfNotPresent
+        image: COF1409/plateforme-educative-feedback-service:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3005
         env:
@@ -52,7 +52,7 @@ spec:
             secretKeyRef:
               name: app-secrets
               key: JWT_SECRET
-        - name: AI_ENGINE_FEEDBACK_URL # Communication interne K8s
+        - name: AI_ENGINE_FEEDBACK_URL 
           value: "http://ai-recommendation-engine:5000/api/ai/feedback"
         readinessProbe:
           httpGet:
