--- a/kubernetes/progress-service/deployment.yaml
+++ b/kubernetes/progress-service/deployment.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: progress-service
-        image: plateforme_educative-progress-service:latest
-        imagePullPolicy: IfNotPresent
+        image: COF1409/plateforme-educative-progress-service:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3003
         env:
