--- a/kubernetes/user-service/deployment.yaml
+++ b/kubernetes/user-service/deployment.yaml
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: user-service
-        image: plateforme_educative-user-service:latest # Assurez-vous que ce nom correspond à votre image
-        imagePullPolicy: IfNotPresent 
+        image: COF1409/plateforme-educative-user-service:latest 
+        imagePullPolicy: Always 
         ports:
         - containerPort: 3001 
         env:
@@ -54,7 +54,7 @@ spec:
               key: JWT_SECRET
         readinessProbe:
           httpGet:
-            path: / # Route de health check simple
+            path: / 
             port: 3001
           initialDelaySeconds: 15 
           periodSeconds: 20
