--- a/.github/workflows/content-service-ci.yml
+++ b/.github/workflows/content-service-ci.yml
@@ -30,6 +30,6 @@ jobs:
         context: ./content-service
         file: ./content-service/Dockerfile
         push: true
-        tags: VOTRE_DOCKERHUB_USERNAME/plateforme-educative-content-service:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/plateforme-educative-content-service:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
