--- a/.github/workflows/user-service-ci.yml
+++ b/.github/workflows/user-service-ci.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}  
+        password: ${{ secrets.DOCKERHUB_TOKEN }}   
 
     - name: Build and push User Service image
       uses: docker/build-push-action@v5
@@ -30,6 +30,6 @@ jobs:
         context: ./user-service
         file: ./user-service/Dockerfile
         push: true
-        tags: VOTRE_DOCKERHUB_USERNAME/plateforme-educative-user-service:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/plateforme-educative-user-service:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
