CI: Use Docker Hub secrets in tags. K8s: Update deployments to use Docker Hub images and imagePullPolicy Always.

--- a/kubernetes/ai-recommendation-engine/deployment.yaml
+++ b/kubernetes/ai-recommendation-engine/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: ai-recommendation-engine
-        image: cof1409/plateforme-educative-ai-recommendation-engine:latest 
+        image: cof1409/plateforme-educative-ai-recommendation-engine:latest # VOTRE NOM DOCKERHUB
         imagePullPolicy: Always 
         ports:
         - containerPort: 5000
