--- a/kubernetes/feedback-service/deployment.yaml
+++ b/kubernetes/feedback-service/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: feedback-service
-        image: cof1409/plateforme-educative-feedback-service:latest
+        image: cof1409/plateforme-educative-feedback-service:latest # VOTRE NOM DOCKERHUB
         imagePullPolicy: Always
         ports:
         - containerPort: 3005
