--- a/kubernetes/progress-service/deployment.yaml
+++ b/kubernetes/progress-service/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: progress-service
-        image: cof1409/plateforme-educative-progress-service:latest
+        image: cof1409/plateforme-educative-progress-service:latest # VOTRE NOM DOCKERHUB
         imagePullPolicy: Always
         ports:
         - containerPort: 3003
