--- a/kubernetes/recommendation-service-nodejs/deployment.yaml
+++ b/kubernetes/recommendation-service-nodejs/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: recommendation-service-nodejs
-        image: cof1409/plateforme-educative-recommendation-service-nodejs:latest
+        image: cof1409/plateforme-educative-recommendation-service-nodejs:latest # VOTRE NOM DOCKERHUB
         imagePullPolicy: Always
         ports:
         - containerPort: 3004
