--- a/.github/workflows/ai-engine-python-ci-cd.yml
+++ b/.github/workflows/ai-engine-python-ci-cd.yml
@@ -14,26 +14,30 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.get_sha.outputs.sha_short }}
-      image_name_on_hub: cof1409/plateforme-educative-ai-recommendation-engine
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }} 
+        token: ${{ secrets.ACTIONS_PAT }} # UTILISER LE PAT
+
     - name: Get short SHA for image tag
       id: get_sha
       run: echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-    - name: Define Docker Hub image name (for awk)
-      id: image_def_awk
-      run: echo "IMAGE_BASE_NAME_FOR_AWK=cof1409/plateforme-educative-ai-recommendation-engine" >> $GITHUB_ENV
+
+    - name: Define Docker Hub image name
+      id: image_def
+      run: echo "IMAGE_NAME_ON_HUB=cof1409/plateforme-educative-ai-recommendation-engine" >> $GITHUB_ENV
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build and push AI Recommendation Engine image
       id: docker_build
       uses: docker/build-push-action@v5
@@ -42,13 +46,14 @@ jobs:
         file: ./ai-recommendation-engine/Dockerfile 
         push: true
         tags: |
-          cof1409/plateforme-educative-ai-recommendation-engine:latest
-          cof1409/plateforme-educative-ai-recommendation-engine:${{ env.IMAGE_TAG }}
+          ${{ env.IMAGE_NAME_ON_HUB }}:latest
+          ${{ env.IMAGE_NAME_ON_HUB }}:${{ env.IMAGE_TAG }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+
     - name: Update Kubernetes deployment manifest
       env:
-        NEW_IMAGE_WITH_TAG: cof1409/plateforme-educative-ai-recommendation-engine:${{ env.IMAGE_TAG }}
+        NEW_IMAGE_WITH_TAG: ${{ env.IMAGE_NAME_ON_HUB }}:${{ env.IMAGE_TAG }}
       run: |
         MANIFEST_FILE="kubernetes/ai-recommendation-engine/deployment.yaml"
         echo "Updating $MANIFEST_FILE with image: $NEW_IMAGE_WITH_TAG"
@@ -57,14 +62,15 @@ jobs:
         cat $MANIFEST_FILE
         echo "--- End of $MANIFEST_FILE ---"
         git status
+
     - name: Commit and push manifest changes
       run: |
         git config --global user.name "GitHub Actions Bot (AIEngine)"
-        git config --global user.email "actions-bot@users.noreply.github.com"
+        git config --global user.email "chfarouk@users.noreply.github.com"
         git add kubernetes/ai-recommendation-engine/deployment.yaml
         if git diff --staged --quiet; then
           echo "Aucun changement dans le manifeste de déploiement pour ai-recommendation-engine."
         else
-          git commit -m "CI: Update ai-engine K8s deployment to image tag ${{ env.IMAGE_TAG }}"
+          git commit -m "CI: Update ai-engine K8s deployment to image tag ${{ env.IMAGE_TAG }} [skip ci]"
           git push
         fi
