--- a/.github/workflows/user-service-ci-cd.yml
+++ b/.github/workflows/user-service-ci-cd.yml
@@ -14,21 +14,20 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.get_sha.outputs.sha_short }}
-      image_name_on_hub: cof1409/plateforme-educative-user-service
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }} 
+        token: ${{ secrets.ACTIONS_PAT }} # <<< UTILISER LE PAT ICI
 
     - name: Get short SHA for image tag
       id: get_sha
       run: echo "IMAGE_TAG=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-    - name: Define Docker Hub image name (for awk)
-      id: image_def_awk
-      run: echo "IMAGE_BASE_NAME_FOR_AWK=cof1409/plateforme-educative-user-service" >> $GITHUB_ENV
+    - name: Define Docker Hub image name
+      id: image_def
+      run: echo "IMAGE_NAME_ON_HUB=cof1409/plateforme-educative-user-service" >> $GITHUB_ENV
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -47,14 +46,14 @@ jobs:
         file: ./user-service/Dockerfile
         push: true
         tags: |
-          cof1409/plateforme-educative-user-service:latest
-          cof1409/plateforme-educative-user-service:${{ env.IMAGE_TAG }}
+          ${{ env.IMAGE_NAME_ON_HUB }}:latest
+          ${{ env.IMAGE_NAME_ON_HUB }}:${{ env.IMAGE_TAG }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
     - name: Update Kubernetes deployment manifest
       env:
-        NEW_IMAGE_WITH_TAG: cof1409/plateforme-educative-user-service:${{ env.IMAGE_TAG }}
+        NEW_IMAGE_WITH_TAG: ${{ env.IMAGE_NAME_ON_HUB }}:${{ env.IMAGE_TAG }}
       run: |
         MANIFEST_FILE="kubernetes/user-service/deployment.yaml"
         echo "Updating $MANIFEST_FILE with image: $NEW_IMAGE_WITH_TAG"
@@ -70,11 +69,11 @@ jobs:
     - name: Commit and push manifest changes
       run: |
         git config --global user.name "GitHub Actions Bot (UserSvc)"
-        git config --global user.email "actions-bot@users.noreply.github.com"
+        git config --global user.email "chfarouk@users.noreply.github.com" # Utilisez votre email noreply ou un autre
         git add kubernetes/user-service/deployment.yaml
         if git diff --staged --quiet; then
           echo "Aucun changement dans le manifeste de déploiement pour user-service."
         else
-          git commit -m "CI: Update user-service K8s deployment to image tag ${{ env.IMAGE_TAG }}"
+          git commit -m "CI: Update user-service K8s deployment to image tag ${{ env.IMAGE_TAG }} [skip ci]"
           git push
         fi
